# todolist-cli

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: build.yml
src/: error.rs  gui_main.rs  main.rs  storage.rs  task.rs  task_list.rs
