[package]
name = "todolist-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.24"
egui = "0.24"

# 添加二进制目标
[[bin]]
name = "todolist-cli"
path = "src/main.rs"

[[bin]]
name = "todolist-gui"
path = "src/gui_main.rs"